fixing margins on store pages to prevent overlap with nav (#401)

--- a/client/src/components/Navigation/MobileNav/styles.module.css
+++ b/client/src/components/Navigation/MobileNav/styles.module.css
@@ -8,7 +8,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 9999;
+    z-index: var(--l--z-highest);
     pointer-events: none;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
