--- a/client/src/components/StoreProductHead/styles.module.css
+++ b/client/src/components/StoreProductHead/styles.module.css
@@ -13,6 +13,14 @@
         display: flex;
         padding: 3rem 0 4rem;
     }
+
+    @media (--mq-lt-m) {
+        margin: 120px 0 0;
+    }
+
+    @media (--mq-lt-s) {
+        margin: 72px 0 0;
+    }
 }
 
 .images {
